Added working test