@@ -13,7 +13,7 @@ import school.faang.user_service.repository.goal.GoalRepository;
 import school.faang.user_service.validator.GoalValidator;
 
 import java.util.List;
-import java.util.Collection;
+import java.util.stream.Collectors;
 
 /**
  * @author Ilia Chuvatkin
@@ -60,12 +60,10 @@ public class GoalService {
 
     public List<GoalDto> findGoalsByUser(Long userId, GoalFilterDto filter) {
         List<Goal> userGoals = getGoalsByUserId(userId);
-        List<List<Goal>> filteredGoals = goalFilters.stream()
+        goalFilters.stream()
                 .filter(f -> f.isApplicable(filter))
-                .map(f -> f.apply(userGoals, filter))
-                .toList();
-        List<Goal> filteredUserGoals = filteredGoals.stream().flatMap(Collection::stream).toList();
-        return filteredUserGoals.stream().map(goalMapper::toDto).toList();
+                .forEach(f -> f.apply(userGoals, filter));
+        return userGoals.stream().map(goalMapper::toDto).toList();
     }
 
     public List<Goal> getGoalsByUserId(Long userId) {
@@ -73,6 +71,6 @@ public class GoalService {
                 .filter(g -> !skillRepository.findSkillsByGoalId(g.getId()).isEmpty())
                 .peek(g -> skillRepository.findSkillsByGoalId(g.getId())
                         .forEach(s -> goalRepository.addSkillToGoal(s.getId(), g.getId())))
-                .toList();
+                .collect(Collectors.toList());
     }
 }
